--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  background-image: url("./Assets/bg-image.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 .App-logo {
@@ -7,11 +17,9 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
+
+
 
 .App-header {
   background-color: #282c34;
@@ -34,5 +42,17 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    width: 480px;
   }
 }
